--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.videoplayer">
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="29"
+        tools:ignore="ScopedStorage" />
 
     <application
         android:allowBackup="true"
@@ -15,12 +21,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.VideoPlayer"
         tools:targetApi="31">
-        <activity
-            android:name=".activities.VideoPlayerActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activities.VideoFilesActivity"
-            android:exported="false" />
         <activity
             android:name=".activities.SplashScreenActivity"
             android:exported="true"
@@ -35,7 +35,14 @@
             android:name=".activities.AllowAccessActivity"
             android:exported="false" />
         <activity
+            android:name=".activities.VideoFilesActivity"
+            android:parentActivityName=".activities.VideoFoldersActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.VideoFoldersActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.VideoPlayerActivity"
             android:exported="false" />
     </application>
 
